--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.19",
+    "framer-motion": "^11.1.9",
     "postcss": "^8.4.38",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
