--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "sass": "^1.77.0",
     "scss": "^0.2.4",
     "typescript": "^4.9.5",
+    "typewriter-effect": "^2.21.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
